Assignment.jj
PARSER_BEGIN(Assignment)

import java.util.*; //library import
import java.util.regex.Pattern;
import java.util.regex.Matcher;


public class Assignment {
    private static boolean mainDefined = false; //checking whether there is a main function, to make sure only defined once, and importantly defined

    public static void main(String[] args) throws ParseException, TokenMgrError {
            try{
                Assignment parser = new Assignment(System.in);
                parser.Start();

                System.out.println("PASS");
                System.out.println("TODO show result");
            }

            catch (Throwable t){
                System.out.println("FAIL");
                String errorMessage = "Unknown pass error";
                int lineNo = 0;
                
                try {
                // Check which throwable was passed and output the apropriate error message
                     throw t;
                } 

                catch(ParseException e) {
                    errorMessage = intepretParseException(e); // passing the javacc error message into the intepreter to get a more granular result
                    lineNo = e.currentToken.beginLine; // getting the line no of the token
                } 

                catch(TokenMgrError e) {
                    Matcher matcher = Pattern.compile("line \\d+").matcher(e.getMessage());
                    if (matcher.find())
                        lineNo = Integer.parseInt(matcher.group().replace("line ", ""));


                    errorMessage = e.toString(); 
                }

                catch(CustomErrorMessage e) { // this is a custom error message thrown at run-time when dealing with grammer like if the main function is defined or parameters being consistent
                    errorMessage = e.getMessage(); // custom class method
                    lineNo = e.getLine(); // custom class method
                } 

                
                System.err.println(errorMessage);
                System.err.println(lineNo);
        
            // Catching Throwable is ugly but JavaCC throws Error objects!
            }
    }

        private static String intepretParseException(ParseException e) { // given a parse exception, take the token and give a helpful string representation of the error
            // getting the relevent information from the thrown token
            String str = e.currentToken.image + e.currentToken.next.image;
            int thisToken = e.currentToken.kind;
            int nextToken = e.currentToken.next.kind;

            // Form the set of expected token kinds
            Set<Integer> expected = new HashSet();
            for (int i = 0; i <  e.expectedTokenSequences.length; i++) {
                expected.add(e.expectedTokenSequences[i][0]);
            }

            //System.out.println("\n" + "thisToken: " + thisToken + "\n" + "nextToken: " + nextToken + "\n" + "Expected: " + expected.toString() + "\n");

            // Deciphering the parse exception from the thrown token 
            if (thisToken == SPACE && nextToken == EOL)
                return "Unexpected EOL";


            // Consecutive space check
            if (nextToken == SPACE){
                if (thisToken == SPACE){
                    return "Cannot have consecutive spaces, invalid space";
                }
                else{
                  return "Unexpected space";
                }
            }
            
            // checking for empty function defintion
            if (expected.contains(DEF))
                if (thisToken == EOF && nextToken == EOF)
                    return "Empty input";
                else
                    return "Missing keyword DEF";

            if (( thisToken == FUNCNAME) && expected.contains(SPACE) && nextToken != SPACE)
                return "Incorrect defintion of function, correct the formatting of the function name, instead recieved: " + str;

            if ((thisToken == MAIN ) && expected.contains(SPACE) && nextToken != SPACE)
                return "Incorrect defintion of MAIN, correct the formatting of the function name, instead recieved: " + str;

    
            // function name errors
            if (expected.contains(MAIN) && expected.contains(FUNCNAME)) {
                if (nextToken == DEF)
                    return "Cannot use DEF as a function name";

                return "Missing function name";
            }

            // internal function expression errors
            if ((thisToken == NUM || thisToken == PARAM ) && (expected.contains(PLUS) && expected.contains(MULT) && expected.contains(SPACE)))
                return "Invalid expression inside function definition, expected an operation or an ending of the function definition, was given: " + str;

            if ((thisToken == MULT || thisToken == PLUS ) && (expected.contains(PARAM) && expected.contains(SPACE) && expected.contains(FUNCNAME)))
                return "Invalid expression next to operation inside function definition, was given: " + str;
                 
            // strange function name choices
            if ((thisToken == FUNCNAME || thisToken == MAIN) && expected.contains(SPACE))
                return "Invalid function name " + str;
            
            // no parameter
            if (expected.contains(PARAM) && expected.size() == 1)
                return "Missing parameter name";

            if (thisToken == PARAM) {
                if (expected.contains(SPACE) && expected.size() == 1) {
                    return "Invalid parameter name " + str;
                } else {
                    return "Invalid parameter reference " + str;
                }
            }

            // formatting errors
            if (expected.contains(LBRACE)) {
                if (nextToken == PARAM) {
                    return "MAIN definition should have no parameter";
                } else {
                    return "Missing {";
                }
            }

            if (thisToken == FUNCNAME && expected.contains(LBRACKET))
                return "Invalid function call " + str;

            if (expected.contains(NUM) && expected.contains(PARAM) && expected.contains(FUNCNAME)) {
                if (nextToken == MAIN)
                    return "Invalid call, MAIN cannot be called in a function expression";

                if (thisToken == LBRACKET) {
                    return "Invalid use of left bracket, only to be used with a function call";

                } else if (thisToken == SPACE) {
                    switch (nextToken) {
                        case EOF:
                            return "Function definition missing expression";
                
                    }
                }
            }
            
            // operand ordering error
            if (thisToken == FUNCNAME && (nextToken == PLUS || nextToken == MULT))
                return "Missing operand, was givenn: " + str;

            // catching the uncaught errors missed from above as the sieve tightens we can be more loose 
            if (expected.contains(RBRACKET))
                return "Missing a ), instead recieved: " + str;

            if (expected.contains(RBRACE))
                return "Expecting a } and instead recieved: " + str;

            if (expected.contains(SEMICOLON))
                return "Expecting a ; and instead recieved: " + str;


            
            switch (nextToken) {
                case EOL:
                    return "Unexpected new line";
                case EOF:
                    return "Unexpected end of file";
                case PARAM:
                    return "Unexpected parameter in main function definition, instead given: " + str;
            }

            // final error classification if nothing has been caught 
            return "Unknown string: " + str;
    }

    // checking if a string contains a lowercase char, purpose for checking main function line def 
    private static boolean containsPARAM(String expression) {
        char ch;
        for(int i=0;i < expression.length();i++) {
            ch = expression.charAt(i);
            if(!Character.isDigit(ch)) {
                if (Character.isLowerCase(ch)) {
                    return true;
                }
            }
        } 
        return false; 
    }
    
}

class Evaluater{
    private Function[] functions;
    private int finalValue;
    private Stack<Function> stack = new Stack<Function>();
    private boolean diverges = false;


    // this function takes a string like: ADDFOUR x { x+4 }
    // splits it into the relevent parts to make it a function object and then adds it to the list of functions

    public void addFunctionFromString(String func){ // should look like: 
        // filtering the parts of the function structure
        String name = func.split("[A-Z]+")[0]; 
        String body = func.split("{ . }")[0];
        body = body.substring(1,body.length()-1);
        String namedParam = func.split("[a-z]+")[0];
        System.out.println("\nname: " + name + "\nbody: " + body + "\nnamedparam: " + namedParam +"\n");

    }






}

// all passed functions are passed here for processing
class Function { 
    private String name; // name of this function
    private String body;
    private String namedParam;
    private String[] calledFunctions; // name of all the called functions within this

    // constructor for when a function is found
    public Function(String givenName, String givenBody, String givenNamedParam){
        name = givenName;
        body = givenBody;
        namedParam = givenNamedParam;
        calledFunctions = extractCalledFunctions();
    }

    // constructor when it is being processed in the stack
    public Function(String givenName, String givenBody){
        name = givenName;
        body = givenBody;
        calledFunctions = extractCalledFunctions();
    }

    public String replaceParam(String givenFuncBody){
        return (body.replace(namedParam,givenFuncBody));
    }

    public String[] extractCalledFunctions(){ //getting the called functions 
        String[] substrings = body.split("[A-Z]+");
        return substrings;
    }

    public boolean hasCalledFunctions(){
        return (extractCalledFunctions().length == 0);
    }

    // when this is called by the master functions class, it should:
    // 1) take an internal called funtion
    // 2) find the function with that name
    // 3) call replaceParam on that function with the passed param 
    // 4) then call replaceFuncCall on this function, giving back a decomposed function
    public String replaceFuncCall(String original, String replacer){ 
        return body.replace(original,replacer);

    }

    // getter functions
    public String getName(){return name;}

    public String getBody(){return body;}

    public String getNamedParam(){return namedParam;}

    public String[] getCalledFunc(){return calledFunctions;}

}


class CustomErrorMessage extends Throwable {
    private String message;
    private int line;
   
    // Constructor, not really 
    public CustomErrorMessage(String givenMessage, int givenLine) {
        message =  givenMessage;
        line =  givenLine;
    }

    public String getMessage() {
        return message;
    }

    public int getLine() {
        return line;
    }
}

    
PARSER_END(Assignment)


TOKEN: { 
      <LBRACKET: ("(")> 
    | <RBRACKET: (")")> 
    | <LBRACE: ("{")> 
    | <RBRACE: ("}")> 
    | <SEMICOLON: (";")> 
    | <DEF: ("DEF") >
    | <MAIN: ("MAIN")> 
    | <NUM: ((["1"-"9"])+(["0"-"9"])*) | "0">  //either a 0 or a positive number number 
    | <PLUS: ("+")> 
    | <MULT: ("*")> 
    | <SPACE: (" ")> 
    | <FUNCNAME: (["A"-"Z"])+> 
    | <PARAM: (["a"-"z"])+> 
    | < EOL: "\n" > }
    


void Start() throws ParseException,CustomErrorMessage:{}

{ splitLines() <EOF> End()

 }
    
void splitLines() throws ParseException,CustomErrorMessage:{} //this is to be able to separate each line and determine whether it's a main func of general func (mf/gf resp.)
{
    (<DEF> <SPACE> (<MAIN> MF() | <FUNCNAME> GF()) <SPACE> <SEMICOLON> <EOL>)+
}
    
void WHICHFUNC() throws ParseException,CustomErrorMessage:{} //determining whether the line is a function def or a main def
{
   LOOKAHEAD(2)   GF() |  MF()
}

void GF() throws ParseException, CustomErrorMessage:{Token param;} //grammar for a general function
{
    <SPACE> 
    param = <PARAM>
    <SPACE> <LBRACE> <SPACE> EXP(param) <SPACE> <RBRACE>

  
}

void MF() throws ParseException, CustomErrorMessage:{} //grammar for the main function
{
    {   
        if (mainDefined) {
            throw new ParseException("Main function can only be defined once");
        } else {
            mainDefined = true;
        }
    }
    <SPACE> <LBRACE> <SPACE> EXPMAIN() <SPACE> <RBRACE>
}



void EXP(Token p) throws ParseException, CustomErrorMessage :{Token exactParam;}  //this is whatever can be within the braces of func definition, the body of a function declaration

    
{ 

    (FUNCCALL(p) | <NUM> | exactParam = <PARAM>
    
    {if (!(exactParam.image).equals(p.image)){
        throw new CustomErrorMessage("Expected parameter " + p.image + ", was given, " + exactParam.image + " ", exactParam.beginLine);
    }}
    )

    
    ( (<MULT> | <PLUS>) ( FUNCCALL(p) | <NUM> | exactParam = <PARAM> 

    {if (!(exactParam.image).equals(p.image)){ //checking the passed parameter is the same as the one mentioned in the func def
        throw new CustomErrorMessage("Expected parameter was: " + p.image + ", was given: " + exactParam.image, exactParam.beginLine);
    }}
    ))*



}

void EXPMAIN() throws ParseException,CustomErrorMessage:{}  //this is whatever can be within the braces of main definition, the body of a function declaration. 
{
    ((<NUM> | FUNCCALLMAIN()) ((<MULT> | <PLUS>)( FUNCCALLMAIN() | <NUM> ))*)
}



void FUNCCALL(Token p) throws ParseException,CustomErrorMessage:{} //this the syntax of a call to a function, which would be within the body of a function decl i.e foo(bar()*5)) 
{
    <FUNCNAME> <LBRACKET> EXP(p) <RBRACKET>

}

void FUNCCALLMAIN() throws ParseException,CustomErrorMessage:{Token t;} //this the syntax of a call to a main function, which would be within the body of a function decl i.e foo(bar()*5)) 
{
    <FUNCNAME> <LBRACKET>  EXPMAIN() <RBRACKET>


}

void End () throws ParseException,CustomErrorMessage:{}{
    {if (!mainDefined) {
        throw new CustomErrorMessage("Missing MAIN function",0);
        }
    }
}
